--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "template-vue3-webpack5",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "main.js",
   "license": "MIT",
   "scripts": {
     "build": "webpack",
     "dev": "webpack serve --open --progress"
   },
+  "gitHooks": {
+    "commit-msg": "node scripts/verifyCommit.js"
+  },
   "devDependencies": {
     "css-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
+    "husky": "^7.0.2",
     "style-loader": "^3.2.1",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
