--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "commit-msg": "node scripts/verifyCommit.js"
   },
   "devDependencies": {
+    "chalk": "^4.1.2",
     "css-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
-    "husky": "^7.0.2",
     "style-loader": "^3.2.1",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.0.0"
+    "webpack-dev-server": "^4.0.0",
+    "yorkie": "^2.0.0"
   }
 }
