feat: 新增prettierrc格式 yarn限制

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "main.js",
   "license": "MIT",
   "scripts": {
+    "preinstall": "node scripts/checkYarn.js",
     "build": "webpack",
     "dev": "webpack serve --open --progress"
   },
