--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "chalk": "^4.1.2",
     "css-loader": "^6.2.0",
+    "eslint": "^7.32.0",
     "html-webpack-plugin": "^5.3.2",
     "style-loader": "^3.2.1",
     "webpack": "^5.51.1",
