--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "css-loader": "^6.2.0",
     "eslint": "^7.32.0",
     "html-webpack-plugin": "^5.3.2",
+    "less": "^4.1.2",
+    "less-loader": "^10.0.1",
     "style-loader": "^3.2.1",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
