--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "commit-msg": "node scripts/verifyCommit.js"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
+    "babel-loader": "^8.2.2",
     "chalk": "^4.1.2",
     "css-loader": "^6.2.0",
     "eslint": "^7.32.0",
@@ -23,5 +26,9 @@
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.0.0",
     "yorkie": "^2.0.0"
+  },
+  "dependencies": {
+    "core-js": "^3.18.1",
+    "regenerator-runtime": "^0.13.9"
   }
 }
