--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "less": "^4.1.2",
     "less-loader": "^10.0.1",
     "style-loader": "^3.2.1",
+    "vue-loader": "^16.8.1",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.0.0",
@@ -29,6 +30,7 @@
   },
   "dependencies": {
     "core-js": "^3.18.1",
-    "regenerator-runtime": "^0.13.9"
+    "regenerator-runtime": "^0.13.9",
+    "vue": "^3.2.19"
   }
 }
