--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "less-loader": "^10.0.1",
     "style-loader": "^3.2.1",
     "vue-loader": "^16.8.1",
+    "vue-template-compiler": "^2.6.14",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.0.0",
