--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "css-loader": "^6.2.0",
     "eslint": "^7.32.0",
     "html-webpack-plugin": "^5.3.2",
+    "jquery": "^3.6.0",
     "less": "^4.1.2",
     "less-loader": "^10.0.1",
+    "lodash": "^4.17.21",
     "style-loader": "^3.2.1",
+    "terser-webpack-plugin": "^5.2.4",
     "vue-loader": "^16.8.1",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
