--- a/package.json
+++ b/package.json
@@ -14,15 +14,21 @@
   "devDependencies": {
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.6",
+    "autoprefixer": "9.8.6",
     "babel-loader": "^8.2.2",
     "chalk": "^4.1.2",
     "css-loader": "^6.2.0",
+    "css-minimizer-webpack-plugin": "^3.1.1",
+    "cssnano-preset-advanced": "^5.1.4",
     "eslint": "^7.32.0",
     "html-webpack-plugin": "^5.3.2",
     "jquery": "^3.6.0",
     "less": "^4.1.2",
     "less-loader": "^10.0.1",
     "lodash": "^4.17.21",
+    "mini-css-extract-plugin": "^2.4.2",
+    "postcss-loader": "^6.1.1",
+    "precss": "^4.0.0",
     "style-loader": "^3.2.1",
     "terser-webpack-plugin": "^5.2.4",
     "vue-loader": "^16.8.1",
